<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context=".Login">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/protection"
        app:layout_constraintBottom_toTopOf="@id/loginCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.3" />

    <!-- Login Card -->
    <LinearLayout
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_cornerc"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage">

        <!-- Login Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_Text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Email Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="6dp"
            android:text="@string/Loginemail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Email Input -->

        <!-- Password Label -->
        <EditText
            android:id="@+id/LEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="6dp"
            android:text="@string/Lpassword_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Password Input -->

        <!-- Forgot Password -->
        <EditText
            android:id="@+id/LpassEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

        <!-- Social and Login Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <ProgressBar
                android:id="@+id/ProgressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!-- Login Button -->
            <Button
                android:id="@+id/Loginbtn"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/loginBtn"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Sign-Up Link -->
        <TextView
            android:id="@+id/SignupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/L_sign_up"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
